--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,8 @@
     <color name="colorAccent">#FF4081</color>
 
     <!-- // TODO : Create 3 colors (Background_color, input_color, btn_color) -->
+    <color name="background">#8c0909</color>
+    <color name="input">#b11dd2</color>
+    <color name="btn">#1d47d2</color>
+
 </resources>
